change drag and drop example

--- a/static/css/player.css
+++ b/static/css/player.css
@@ -1,2 +1,15 @@
-.red{background-Color:red;}
-.skyblue{background-Color:skyblue }
+.red {
+    background-Color: red;
+  }
+
+.skyblue {
+    background-Color: skyblue
+}
+  
+.uploaderContainer {
+    margin: 10px 0
+}
+
+.drop_zone_container {
+    margin: 20px 0
+}
