--- a/static/css/player.css
+++ b/static/css/player.css
@@ -47,7 +47,7 @@ h1 {
 
 /*=================== BUTTONS =============================*/
 
-.myButton {
+.playerButtons {
 	background-color:#44c767;
 	-moz-border-radius:20px;
 	-webkit-border-radius:20px;
@@ -63,13 +63,51 @@ h1 {
 	text-shadow:0px 1px 0px #2f6627;
     margin-right: 10px;
 }
-.myButton:hover {
+.playerButtons:hover {
 	background-color:#5cbf2a;
 }
-.myButton:active {
+.playerButtons:active {
 	position:relative;
 	top:1px;
 }
+
+.submitButton {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
+	background:-moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+	background:-webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+	background:-o-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+	background:-ms-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+	background:linear-gradient(to bottom, #459ec7 5%, #28dbd2 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#459ec7', endColorstr='#28dbd2',GradientType=0);
+	background-color:#459ec7;
+	-moz-border-radius:20px;
+	-webkit-border-radius:20px;
+	border-radius:20px;
+	border:1px solid #ffffff;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:5px 31px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #2f6627;
+}
+.submitButton:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #28dbd2), color-stop(1, #459ec7));
+	background:-moz-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+	background:-webkit-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+	background:-o-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+	background:-ms-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+	background:linear-gradient(to bottom, #28dbd2 5%, #459ec7 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#28dbd2', endColorstr='#459ec7',GradientType=0);
+	background-color:#28dbd2;
+}
+.chooseButtonn:active {
+	position:relative;
+	top:1px;
+}
+
 
 
 /*======================== UPLOAD AND DROP CONTAINER =================*/
