--- a/static/css/player.css
+++ b/static/css/player.css
@@ -93,7 +93,7 @@ h1 {
 	top:1px;
 }
 
-.submitButton {
+.submitButton, #selectFileLabel {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
 	background:-moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
 	background:-webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
@@ -115,7 +115,7 @@ h1 {
 	text-decoration:none;
 	text-shadow:0px 1px 0px #2f6627;
 }
-.submitButton:hover {
+.submitButton:hover, #selectFileLabel:hover {
 	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #28dbd2), color-stop(1, #459ec7));
 	background:-moz-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
 	background:-webkit-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
@@ -173,7 +173,15 @@ h1 {
       border-color: black 
   }
 
+#selectFileButton
+{
+	display: none;
+}
+
 #editCancelButton
   {
 	visibility: hidden;
   }
+
+
+
