--- a/static/css/player.css
+++ b/static/css/player.css
@@ -174,6 +174,8 @@ h1 {
       border-color: black 
   }
 
+/*======================== DELETION, EDITING =================*/
+
 #selectFileButton
 {
 	display: none;
@@ -188,4 +190,15 @@ h1 {
   {
 	visibility: hidden;
   }
+
+#deleteConfirmButton
+  {
+	visibility: hidden;
+  }
+
+.toBeDeletedSong
+{
+    color: lightskyblue;
+    font-weight: bold;
+}
 
