--- a/static/css/player.css
+++ b/static/css/player.css
@@ -4,6 +4,7 @@
  *
  */
 
+
 #audioDropPanel {
     position: absolute;
     top: 50%;
@@ -11,7 +12,7 @@
     margin: 10% 0;
     padding: 0% 3% 3% 3%;
     -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
     width: 60%;
     height: auto;
     background: -webkit-radial-gradient(center ellipse, #444 0%, #111 100%);
@@ -28,7 +29,7 @@
 }
 
 .space_top {
-	padding-top: 10px;
+    padding-top: 10px;
 }
 
 .padding {
@@ -36,11 +37,11 @@
 }
 
 .margin {
-	margin: 10px;
+    margin: 10px;
 }
 
 .hidden {
-	display: none;
+    display: none;
 }
 
 /*================== COLORS ================================*/
@@ -54,80 +55,85 @@
 }
 
 .white {
-	color: white;
+    color: white;
 }
 
 .greenYellow {
-	background-color: #44c767;
+    background-color: #44c767;
 }
 
 
 /*=================== BUTTONS =============================*/
 
 .playerButtons {
-	background-color:#44c767;
-	-moz-border-radius:20px;
-	-webkit-border-radius:20px;
-	border-radius:20px;
-	border:1px solid #18ab29;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:17px;
-	padding:5px 30px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
+    background-color: #44c767;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    border: 1px solid #18ab29;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 17px;
+    padding: 5px 30px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #2f6627;
     margin: 10px;
 }
+
 .playerButtons:hover {
-	background-color:#5cbf2a;
+    background-color: #5cbf2a;
 }
+
 .playerButtons:active {
-	position:relative;
-	top:1px;
+    position: relative;
+    top: 1px;
 }
 
 .submitButton, #selectFileLabel {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
-	background:-moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-	background:-webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-	background:-o-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-	background:-ms-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-	background:linear-gradient(to bottom, #459ec7 5%, #28dbd2 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#459ec7', endColorstr='#28dbd2',GradientType=0);
-	background-color:#459ec7;
-	-moz-border-radius:20px;
-	-webkit-border-radius:20px;
-	border-radius:20px;
-	border:1px solid #ffffff;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:Arial;
-	font-size:17px;
-	padding:5px 31px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #2f6627;
-	margin-top: 7%;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
+    background: -moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+    background: -webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+    background: -o-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+    background: -ms-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
+    background: linear-gradient(to bottom, #459ec7 5%, #28dbd2 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#459ec7', endColorstr='#28dbd2', GradientType=0);
+    background-color: #459ec7;
+    -moz-border-radius: 20px;
+    -webkit-border-radius: 20px;
+    border-radius: 20px;
+    border: 1px solid #ffffff;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: Arial;
+    font-size: 17px;
+    padding: 5px 31px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #2f6627;
+    margin-top: 7%;
 }
+
 .submitButton:hover, #selectFileLabel:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #28dbd2), color-stop(1, #459ec7));
-	background:-moz-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-	background:-webkit-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-	background:-o-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-	background:-ms-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-	background:linear-gradient(to bottom, #28dbd2 5%, #459ec7 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#28dbd2', endColorstr='#459ec7',GradientType=0);
-	background-color:#28dbd2;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #28dbd2), color-stop(1, #459ec7));
+    background: -moz-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+    background: -webkit-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+    background: -o-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+    background: -ms-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
+    background: linear-gradient(to bottom, #28dbd2 5%, #459ec7 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28dbd2', endColorstr='#459ec7', GradientType=0);
+    background-color: #28dbd2;
 }
+
 .chooseButtonn:active {
-	position:relative;
-	top:1px;
+    position: relative;
+    top: 1px;
 }
+
 #editStartButton {
-	font-size:17px;
-	padding:5px 31px;
+    font-size: 17px;
+    padding: 5px 31px;
 }
 
 
@@ -137,20 +143,20 @@
     margin: 10px 0;
     padding: 10px;
     border: 1px solid #ccc;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 #drop_zone_container {
-	width: 45%;
-	float: left;
+    width: 45%;
+    float: left;
     margin: 20px;
     padding: 10px;
     border: 1px solid #ccc;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
 }
 
 #drop_zone {
@@ -161,40 +167,34 @@
     padding: 2%;
     text-align: center;
     font-size: 20pt;
-	font-family: Verdana, serif;
+    font-family: Verdana, serif;
     color: #bbb;
-  }
+}
 
-#drop_zone.is-dragover
-  {
-      background-color: rgb(237, 243, 250);
-      border-color: black 
-  }
+#drop_zone.is-dragover {
+    background-color: rgb(237, 243, 250);
+    border-color: black
+}
 
 /*======================== DELETION, EDITING =================*/
 
-#selectFileButton
-{
-	display: none;
+#selectFileButton {
+    display: none;
 }
 
-#editCancelButton
-  {
-	visibility: hidden;
-  }
+#editCancelButton {
+    visibility: hidden;
+}
 
-#deleteCancelButton
-  {
-	visibility: hidden;
-  }
+#deleteCancelButton {
+    visibility: hidden;
+}
 
-#deleteConfirmButton
-  {
-	visibility: hidden;
-  }
+#deleteConfirmButton {
+    visibility: hidden;
+}
 
-.toBeDeletedSong
-{
+.toBeDeletedSong {
     color: lightskyblue;
     font-weight: bold;
 }
