--- a/static/css/style.css
+++ b/static/css/style.css
@@ -50,6 +50,41 @@ table {
     border-spacing: 0
 }
 
+.space {
+    padding-bottom: 10px;
+}
+
+.space_top {
+    padding-top: 10px;
+}
+
+.padding {
+    padding: 10px;
+}
+
+.margin {
+    margin: 10px;
+}
+
+.hidden {
+    display: none;
+}
+
+.right {
+    float: right;
+}
+
+.left {
+    float: left;
+}
+
+.box {
+     float: left;
+     width: auto;
+     margin-right: 3.33333%;
+     box-sizing: border-box;
+}
+
 body {
     height: 100vh;
     background: -webkit-radial-gradient(center ellipse, #564c84 0%, #0c0b17 100%);
@@ -57,6 +92,8 @@ body {
     color: #888;
     overflow-y:scroll;
 }
+
+/*================================ MEDIA PLAYER AND SONG LIST =============================*/
 
 .mediaplayer {
     position: absolute;
@@ -342,10 +379,6 @@ footer {
     font-family: 'Roboto', sans-serif;
     box-sizing: border-box;
 
-}
-
-#audioInformation {
-    width: 100%;
 }
 
 footer .title {
