--- a/static/css/player.css
+++ b/static/css/player.css
@@ -52,7 +52,7 @@
     top: 1px;
 }
 
-.submitButton, #selectFileLabel {
+/*.submitButton, #selectFileLabel {
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
     background: -moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
     background: -webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
@@ -85,9 +85,10 @@
     background: linear-gradient(to bottom, #28dbd2 5%, #459ec7 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28dbd2', endColorstr='#459ec7', GradientType=0);
     background-color: #28dbd2;
-}
+}*/
 
 .lyricsButton {
+    margin-top: 7%;
     background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
     background: -moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
     background: -webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
@@ -105,9 +106,9 @@
     color: #ffffff;
     font-family: Arial;
     font-size: 17px;
-    padding: 5px 31px;
+    padding: 5px 20px;
     text-decoration: none;
-    text-shadow: 0px 1px 0px #2f6627;
+    text-shadow: 0px 1px 0px #3f3f3f;
 }
 
 .lyricsButton:hover {
@@ -151,7 +152,7 @@
     border-radius: 5px;
     padding: 2%;
     text-align: center;
-    font-size: 20pt;
+    font-size: 18pt;
     font-family: Verdana, serif;
     color: #bbb;
 }
