--- a/static/css/style.css
+++ b/static/css/style.css
@@ -99,7 +99,7 @@ body {
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     width: 500px;
-    height: 520px;
+    height: 500px;
     background: -webkit-radial-gradient(center ellipse, #444 0%, #111 100%);
     background: radial-gradient(ellipse at center, #444 0%, #111 100%);
     box-shadow: 0 30px 20px -20px #000;
@@ -299,6 +299,16 @@ main .player .buttons.repeat {
     opacity: 0.5;
 }
 
+main .player .buttons.repeatActive {
+    top: -1%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 50px;
+    height: 50px;
+    opacity: 1;
+}
+
 main .player .buttons.fast-backward {
     top: 50%;
     left: -1%;
@@ -327,6 +337,16 @@ main .player .buttons.random {
     width: 50px;
     height: 50px;
     opacity: 0.5;
+}
+
+main .player .buttons.randomActive {
+    top: 74%;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: 50px;
+    height: 50px;
+    opacity: 1;
 }
 
 main .title {
