replace upload button with div

--- a/templates/player.html
+++ b/templates/player.html
@@ -96,7 +96,9 @@
 
 
     <div id="drop_zone_container">
-        <div id="drop_zone">Drop mp3 here!</div>
+        <div id="drop_zone">
+            Drop mp3 here!
+        </div>
         <span class="space_top" id="drop_zone_message"></span>
     </div>
     <div class="hidden">
