remove repat&random status display

--- a/templates/player.html
+++ b/templates/player.html
@@ -36,15 +36,22 @@
     <br>
     -->
 
+    <!-- debug: volume position -->
+    <!--
     Volume Position:
     <output id="audioVolumeDisplay"></output>
+    -->
 
-
+    <!-- debug: repeat & random status -->
+    <!--
     <br>
     <br>
     Repeat: <span id="audioRepeatPlayStatusDisplay">OFF</span>
     <br>
     Random: <span id="audioRandomPlayStatusDisplay">OFF</span>
+
+    -->
+
 </div>
 
 
