--- a/templates/player.html
+++ b/templates/player.html
@@ -97,7 +97,6 @@
 
     <div id="drop_zone_container">
         <div id="drop_zone">Drop mp3 here!</div>
-        <span class="space_top" id="drop_zone_message"></span>
     </div>
     <div class="hidden">
         <label for="selectFileButton" id="selectFileLabel">
@@ -108,7 +107,6 @@
     <div>
         <a class="lyricsButton" href="#popup1">SHOW LYRICS</a>
     </div>
-
     <div id="popup1" class="overlay">
         <div class="popup">
             <a class="close" href="#">&times;</a>
@@ -116,6 +114,10 @@
                 <textarea rows="50" cols="90" readonly="readonly" id="lyricsText">Lyrics here...</textarea>
             </div>
         </div>
+    </div>
+            <div class="title">
+                <span id="drop_zone_message"></span>
+            </div>
     </div>
     <!--
     <div>
@@ -126,7 +128,7 @@
 </div>
 
 
-<div class="space musicList hidden" id="showList">
+<div class="space musicList" id="showList">
 
     <div id="edit_buttons">
         <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
