HTML_NEW_TABLE_Prototype

--- a/templates/player.html
+++ b/templates/player.html
@@ -145,7 +145,20 @@
     </div>
 
     <div>
+        <!--
         <div class="padding" id="songSelectorTable"></div>
+        -->
+
+        <!-- NEW PROTOTYPE -->
+        <div class="padding">
+            <table id="songSelectorTable">
+                <tr>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
+
+
         <div class="margin" id="tableDebug"></div>
     </div>
 </div>
