--- a/static/css/player.css
+++ b/static/css/player.css
@@ -4,125 +4,6 @@
  *
  */
 
-
-/*================== COLORS ================================*/
-
-.red {
-    color: red;
-}
-
-.skyblue {
-    background-Color: skyblue;
-}
-
-.white {
-    color: white;
-}
-
-.greenYellow {
-    background-color: #44c767;
-}
-
-
-/*=================== BUTTONS =============================*/
-
-.playerButtons {
-    background-color: #44c767;
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    border: 1px solid #18ab29;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 10px;
-    padding: 5px 10px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #2f6627;
-    margin: 10px;
-}
-
-.playerButtons:hover {
-    background-color: #5cbf2a;
-}
-
-.playerButtons:active {
-    position: relative;
-    top: 1px;
-}
-
-/*.submitButton, #selectFileLabel {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
-    background: -moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: -webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: -o-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: -ms-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: linear-gradient(to bottom, #459ec7 5%, #28dbd2 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#459ec7', endColorstr='#28dbd2', GradientType=0);
-    background-color: #459ec7;
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    border: 1px solid #ffffff;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 17px;
-    padding: 5px 31px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #2f6627;
-    margin-top: 7%;
-}
-
-.submitButton:hover, #selectFileLabel:hover {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #28dbd2), color-stop(1, #459ec7));
-    background: -moz-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: -webkit-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: -o-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: -ms-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: linear-gradient(to bottom, #28dbd2 5%, #459ec7 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28dbd2', endColorstr='#459ec7', GradientType=0);
-    background-color: #28dbd2;
-}*/
-
-.lyricsButton {
-    margin-top: 7%;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #459ec7), color-stop(1, #28dbd2));
-    background: -moz-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: -webkit-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: -o-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: -ms-linear-gradient(top, #459ec7 5%, #28dbd2 100%);
-    background: linear-gradient(to bottom, #459ec7 5%, #28dbd2 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#459ec7', endColorstr='#28dbd2', GradientType=0);
-    background-color: #459ec7;
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    border: 1px solid #ffffff;
-    display: inline-block;
-    cursor: pointer;
-    color: #ffffff;
-    font-family: Arial;
-    font-size: 17px;
-    padding: 5px 20px;
-    text-decoration: none;
-    text-shadow: 0px 1px 0px #3f3f3f;
-}
-
-.lyricsButton:hover {
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #28dbd2), color-stop(1, #459ec7));
-    background: -moz-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: -webkit-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: -o-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: -ms-linear-gradient(top, #28dbd2 5%, #459ec7 100%);
-    background: linear-gradient(to bottom, #28dbd2 5%, #459ec7 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#28dbd2', endColorstr='#459ec7', GradientType=0);
-    background-color: #28dbd2;
-}
-
-
 /*======================== UPLOAD AND DROP CONTAINER =================*/
 
 #uploaderContainer {
@@ -137,7 +18,7 @@
 #drop_zone_container {
     width: 45%;
     float: left;
-    margin: 20px;
+    margin: 1% 7% 6% 6%;
     padding: 10px;
     border: 1px solid #ccc;
     -webkit-border-radius: 5px;
@@ -158,16 +39,31 @@
 }
 
 #drop_zone_message {
-    margin-bottom: 3%;
+    margin: 1% 0% 3% 1%;
     display: inline-block;
-    padding-left: 100%;
-    animation: marquee 10s linear running;
+    white-space: nowrap;
     font-weight: bold;
 }
 
 #drop_zone.is-dragover {
     background-color: rgb(237, 243, 250);
     border-color: black
+}
+
+.drop_zone_message_container {
+    position: relative;
+    top: 50%;
+    width: 88%;
+    margin: 1% 0% 0% 6%;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    height: 1.5rem;
+    border-top: solid 1px #000;
+    border-radius: 10px;
+    background: none;
+    box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.2);
+    overflow: hidden;
+    box-sizing: border-box;
 }
 
 /*======================== DELETION, EDITING =================*/
@@ -193,7 +89,13 @@
     font-weight: bold;
 }
 
-/*======================== TOOLTIP =================*/
+/*======================== TABLE ===============================*/
+
+#songSelectorTable {
+    padding: 10px;
+}
+
+/*======================== TOOLTIP ===============================*/
 
 [tooltip]:before {
 
