--- a/templates/player.html
+++ b/templates/player.html
@@ -70,28 +70,30 @@
         </div>
         <div class="player">
             <img class="buttons repeat" src="static/images/loopButton.png" id="audioRepeatPlayButton"/>
-            <img class="buttons repeatActive hidden" src="static/images/loopButtonActive.png" id="audioRepeatPlayButtonActive"/>
+            <img class="buttons repeatActive hidden" src="static/images/loopButtonActive.png"
+                 id="audioRepeatPlayButtonActive"/>
             <img class="buttons fast-backward" src="static/images/rewindButton.png" id="audioRewindButton"/>
             <img class="buttons play" src="static/images/playButton.png" id="startAudioContext"/>
             <img class="buttons pause hidden" src="static/images/pauseButton.png" id="audioPauseButton"/>
             <img class="buttons fast-forward" src="static/images/skipButton.png" id="audioSkipButton"/>
             <img class="buttons random" src="static/images/randomButton.png" alt="" id="audioRandomPlayButton"/>
-            <img class="buttons randomActive hidden" src="static/images/randomButtonActive.png" alt="" id="audioRandomPlayButtonActive"/>
+            <img class="buttons randomActive hidden" src="static/images/randomButtonActive.png" alt=""
+                 id="audioRandomPlayButtonActive"/>
         </div>
     </main>
 
-        <footer>
-            <div class="title" id="audioInformationFrame">
-                <p id="audioInformation">Arctic Monkeys - The view from the afternoon</p>
-            </div>
+    <footer>
+        <div class="title" id="audioInformationFrame">
+            <p id="audioInformation">Arctic Monkeys - The view from the afternoon</p>
+        </div>
 
-            <div class="time-tracker">
-                <div class="timer">
-                    <div class="bgStart" id="audioPlayBackProgressBar"></div>
-                    <div class="bg" id="audioPlayBackProgressBarController"></div>
-                </div>
+        <div class="time-tracker">
+            <div class="timer">
+                <div class="bgStart" id="audioPlayBackProgressBar"></div>
+                <div class="bg" id="audioPlayBackProgressBarController"></div>
             </div>
-            <div class="time" id="audioPlayBackProgressCounter">00:00:00</div>
+        </div>
+        <div class="time" id="audioPlayBackProgressCounter">00:00:00</div>
     </footer>
 
 
@@ -99,7 +101,6 @@
         <div id="drop_zone">
             Drop mp3 here!
         </div>
-        <span class="space_top" id="drop_zone_message"></span>
     </div>
     <div class="hidden">
         <label for="selectFileButton" id="selectFileLabel">
@@ -110,6 +111,9 @@
     <div>
         <a class="lyricsButton" href="#popup1">SHOW LYRICS</a>
     </div>
+        <div class="drop_zone_message_container">
+            <span id="drop_zone_message"></span>
+        </div>
     <div id="popup1" class="overlay">
         <div class="popup">
             <a class="close" href="#">&times;</a>
@@ -118,20 +122,16 @@
             </div>
         </div>
     </div>
-            <div class="title">
-                <span id="drop_zone_message"></span>
-            </div>
-    </div>
-    <!--
-    <div>
-        <textarea readonly="readonly" id="lyricsText">Lyrics here...</textarea>
-    </div>
-    -->
-
+</div>
+<!--
+<div>
+    <textarea readonly="readonly" id="lyricsText">Lyrics here...</textarea>
+</div>
+-->
 </div>
 
 
-<div class="space musicList" id="showList">
+<div class="space musicList overflowY" id="showList" style="scrollbar-base-color: #0c0b17">
 
     <div id="edit_buttons">
         <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
@@ -145,7 +145,7 @@
     </div>
 
     <div>
-        <div class="padding" id="songSelectorTable"></div>
+        <div id="songSelectorTable"></div>
         <div class="margin" id="tableDebug"></div>
     </div>
 </div>
