--- a/templates/player.html
+++ b/templates/player.html
@@ -125,7 +125,7 @@
         <div class="popup">
             <a class="close" href="#">&times;</a>
             <div class="content">
-                <textarea rows="50" cols="90" readonly="readonly" id="lyricsText">Lyrics here...</textarea>
+                <textarea rows="50" cols="50" readonly="readonly" id="lyricsText">Lyrics here...</textarea>
             </div>
         </div>
     </div>
@@ -138,17 +138,18 @@
 </div>
 
 
-<div class="space musicList overflowY" id="showList" style="scrollbar-base-color: #0c0b17">
+<div class="space musicList overflow" id="showList" style="scrollbar-base-color: #0c0b17">
 
     <div id="edit_buttons">
         <input type="button" class="playerButtons" id="editStartButton" value="EDIT">
         <input type="button" class="playerButtons" id="editCancelButton" value="CANCEL">
-    </div>
-
-    <div id="delete_buttons">
         <input type="button" class="playerButtons" id="deleteButton" value="CUT">
         <input type="button" class="playerButtons" id="deleteConfirmButton" value="CONFIRM">
         <input type="button" class="playerButtons" id="deleteCancelButton" value="CANCEL">
+    </div>
+
+    <div id="delete_buttons">
+
     </div>
 
     <div>
